--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Camille walk through example of structured article and how she might set up the 
 
 ## Which evidence do I cite?
 
-![](pyramid.PNG)
+&lt;img src="img/pyramid.PNG" width="800" /&gt;![](img/pyramid.PNG)
 
 ---
 
@@ -142,7 +142,7 @@ this is useful for literature review as you are building ideas, but also for sav
 ---
 
 # Journal Article Publishing Timeline
-![](timeline.JPG)
+&lt;img src="img/timeline.png" width="800" /&gt;![](img/timeline.JPG)
 ---
 
 # Formulating Research Questions and Topics
