--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Intro to R</title>
+    <title>Intro to Scientific Writing and Publishing</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Camille Cioffi, PhD &amp; Maria Schweer-Collins, PhD" />
+    <meta name="author" content=" Camille Cioffi, PhD &amp; Maria Schweer-Collins, PhD" />
     <meta name="date" content="2020-09-25" />
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
     <link rel="stylesheet" href="my-theme.css" type="text/css" />
@@ -12,8 +12,8 @@
     <textarea id="source">
 class: left, middle, inverse, title-slide
 
-# Intro to R
-### <span style="font-size: 90%;">Camille Cioffi, PhD &amp; Maria Schweer-Collins, PhD</span>
+# Intro to Scientific Writing and Publishing
+### <br><span style="font-size: 90%;">Camille Cioffi, PhD &amp; Maria Schweer-Collins, PhD</span>
 ### <span style="font-size: 70%;">University of Oregon</span>
 ### <span style="font-size: 70%;">September 25, 2020</span>
 
@@ -25,85 +25,151 @@ class: left, middle, inverse, title-slide
 
 
 
+
+
 class: center, middle
 
-![](img/coding.PNG)
+# What is your biggest challenge or fear with academic writing?
+
+### [Let us know here](https://oregon.qualtrics.com/jfe/form/SV_06aIE9Gzad9jFch)
+
 ---
 class: inverse, center, middle
 
-# Introductions
-
-•	Name
-•	Pronouns
-•	Program
-•	Where you are zooming from/ if you moved
-•	Experience with R
-
-
----
-
-# Objectives for Today
-
-* Understand the advantages and disadvantages of R
-* Know where to look for help and to learn more about R
-* Orient yourself to R and RStudio
-* Understand the basics of working with data: load data, save data, create a simple plot
-* Learn some best practices for using R scripts, using data, and projects
+# What is academic writing?
 
 
 
 ---
 
+# Exercise 1
 
-# Instructions for downloading R and Workshop Materials
+1. Do a google search to identify an academic article in your field from the last 5 years.
 
-Install the course materials from [Github](https://github.com/schweercollins/COEworkshops)
+2. Identify the key components of each section (we will assign groups)
+* Abstract (e.g., the sample size)
+* Introduction (e.g., the problem statement)
+* Method (e.g., the analysis plan)
+* Results (e.g., the descriptive statistics)
+* Discussion (e.g., limitations)
 
-- download data.csv; data.sav; COE R Workshop R Markdown
-
-Install R for windows [here](https://cran.r-project.org/bin/windows/base/)
-
-Install R for Mac [here](https://cran.r-project.org/bin/macosx/)
-
-Install Rstudio [here](https://rstudio.com/products/rstudio/download/)
+*Enter information [here](https://oregon.qualtrics.com/jfe/form/SV_6hB1Mlb0oGiPndH)*
 
 
 ---
 
-# Introduction to R Packages 
+## Resources on Writing Well
 
-1. How to [install, load](https://rstudio-education.github.io/hopr/packages2.html), and [update](https://support.rstudio.com/hc/en-us/articles/201057987-Quick-list-of-useful-R-packages) 
+- [Writing Your Journal Article in Twelve Weeks](https://www.amazon.com/Writing-Journal-Twelve-Weeks-Second/dp/022649991X/ref=sr_1_1?dchild=1&amp;keywords=Writing+Your+Journal+Article+in+Twelve+Weeks%3A+A+Guide+to+Academic+Publishing+Success+%28second+edition%29&amp;qid=1600789341&amp;sr=8-1)
+- [The Only Academic Phrasebook You'll Ever Need: 600 Examples of Academic Language](https://www.amazon.com/Only-Academic-Phrasebook-Youll-Ever-ebook/dp/B01M0QFVHL/ref=sr_1_1_sspa?dchild=1&amp;keywords=the+only+academic+phrasebook&amp;qid=1600789375&amp;sr=8-1-spons&amp;psc=1&amp;spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExUVdJQlI5UklGNUZZJmVuY3J5cHRlZElkPUEwMjU1MjI3Rlc3RUZPNjEwN01DJmVuY3J5cHRlZEFkSWQ9QTA3MDk0MDAzTlJXV0xSTVRVUTZUJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==)
+- [The Professor is In Website](http://theprofessorisin.com/)
+- [Free productivity/writing webinars](http://theprofessorisin.com/free-productivity-webinars/)
+- [How to Write a Lot](https://www.amazon.com/How-Write-Lot-Practical-Productive/dp/1433829738/ref=sr_1_2?dchild=1&amp;keywords=how+to+write+a+lot&amp;qid=1600789418&amp;sr=8-2)
+- [Writing Science: How to Write Papers That Get Cited and Proposals That Get Funded](https://www.amazon.com/Writing-Science-Papers-Proposals-Funded/dp/0199760241/ref=sr_1_4?dchild=1&amp;keywords=scientific+grant+writing&amp;qid=1600789452&amp;sr=8-4) 
+- [Bird by Bird](https://www.amazon.com/Bird-Some-Instructions-Writing-Life/dp/0385480016)
+- [Berkley Student Learning Center](https://slc.berkeley.edu/writing-worksheets-and-other-writing-resources/nine-basic-ways-improve-your-style-academic-writing)
 
-2. Commonly used and [useful packages](https://support.rstudio.com/hc/en-us/articles/201057987-Quick-list-of-useful-R-packages)
+
+
+
+???
+Maria review benefits of each of these resources 
+
+--
+
+***&lt;center&gt;"Writing is learned by imitation.&lt;br&gt; I learned to write mainly by reading writers who were doing the kind of writing I wanted to do and by trying to figure out how they did it."&lt;br&gt;&lt;br&gt;***
+
+&lt;center&gt;-William Zinsser in "Writing to Learn"&lt;/center&gt;
+
 
 ---
 
+## Before you write, find an outlet for your work.
 
-# Introduction to Workflow in R
 
-1. [R Projects](https://r4ds.had.co.nz/workflow-projects.html)
+--
+### Pick a target journal
 
-2. [Scripts, markdown, and console: differences and uses](https://r4ds.had.co.nz/r-markdown.html)
+1. [Compare publishing policies of prospective journals](/https://transpose-publishing.github.io/#/)
+
+2. Identify the impact factor of prospective journals
+
+* [Psychology Journals](https://www.apa.org/pubs/journals/resources/impact-factors)
+* [Journal Citation Reports](https://www.scimagojr.com/journalrank.php?category=3304)
+
+--
+
+### Info to find
+
+* Page limit
+* Citation limit
+* Citation style (APA and AMA are most common)
+* Time for first review and time to acceptance
+* Structure of article
+
+
+
+???
+Rationale
+Camille walk through example of structured article and how she might set up the formate 
+
+
 
 ---
 
-# Loading and Viewing Data 
+# Referencing the Literature
 
-1. Saving your data in the same folder as your project
-2. [Tibble and dataframes: uses and differences](https://r4ds.had.co.nz/tibbles.html)
-3. Tools to [preview data](https://learn.datacamp.com/courses/introduction-to-the-tidyverse)
-4. [Hot Keys](https://support.rstudio.com/hc/en-us/articles/200711853-Keyboard-Shortcuts)
+## Which evidence do I cite?
+
+&lt;img src="img/pyramid.PNG" width="800" /&gt;![](img/pyramid.PNG)
 
 ---
 
-# Resources 
+# Referencing the Literature cont.
 
-![](img/google.PNG)
+## Citation Management
 
-- Google -&gt;  Stack Exchange 
-- R Course Sequence in the College of Education 
-- Datacamp
-- [R Cheatsheets](https://rstudio.com/resources/cheatsheets/)
+### Freely available open source options:
+
+* [Zotero](https://www.zotero.org/)
+
+* [Mendeley](https://www.mendeley.com/homepage-2-1?interaction_required=true&amp;adobe_mc_sdid=SDID%3D5923057BDC04CE44-76390FD3C0F10572%7CMCORGID%3D4D6368F454EC41940A4C98A6%40AdobeOrg%7CTS%3D1600788418&amp;adobe_mc_ref=https%3A%2F%2Fwww.google.com%2F)
+
+???
+this is useful for literature review as you are building ideas, but also for saving a lot of time in the long-term for reference management. Most have plug-ins for word to streamline referencing. 
+- Camille and Maria review pros/cons of each, could consider a screenshare
+
+---
+
+# Journal Article Publishing Timeline
+&lt;img src="img/timeline.png" width="800" /&gt;![](img/timeline.JPG)
+---
+
+# Formulating Research Questions and Topics: Brief Tips
+
+* Use recent meta-analyses or systematic reviews (section on future studies)
+* Can I apply this research question to a different population, developmental stage?
+* Is there a new method or research design I can use to answer this question?
+* Are there important variables that have been left out of the existing research?
+* Replication is important!
+* There are many large-scale administrative datasets available to you. 
+
+
+
+---
+class: center, middle
+
+# Questions/Discussion
+
+---
+
+class: left
+
+# Contact Info
+
+### - Maria *mschweer@uoregon.edu*
+
+### - Camille *ccioffi@uoregon.edu*
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
